--- a/sertificat.html
+++ b/sertificat.html
@@ -22,22 +22,22 @@
             <p class="header-nav__descr"> <span>Центр сертификации TemplateMonster</span></p>
             
             <ul class="ul-nav">
-                <li class="header-nav__nav wow fadeInRight" data-wow-delay='1.1s'><a href="#">Promo</a></li>
-                <li class="header-nav__nav wow fadeInRight" data-wow-delay='1.2s'><a href="#s1">Who am I?</a></li>
-                <li class="header-nav__nav wow fadeInRight" data-wow-delay='1.3s'><a href="#s2">Why me?</a></li>
-                <li class="header-nav__nav wow fadeInRight" data-wow-delay='1.4s'><a href="#s3">Works</a></li>
-                <li class="header-nav__nav wow fadeInRight" data-wow-delay='1.5s'><a href="#s4">Contacts</a></li>
+                <li class="header-nav__nav wow fadeInRight" data-wow-delay='1.1s'><a href="#">Главная</a></li>
+                <li class="header-nav__nav wow fadeInRight" data-wow-delay='1.2s'><a href="#s1">О себе</a></li>
+                <li class="header-nav__nav wow fadeInRight" data-wow-delay='1.3s'><a href="#s2">Почему я?</a></li>
+                <li class="header-nav__nav wow fadeInRight" data-wow-delay='1.4s'><a href="#s3">Работы</a></li>
+                <li class="header-nav__nav wow fadeInRight" data-wow-delay='1.5s'><a href="#s4">Контакты</a></li>
             </ul>
-        </nav>
+    </nav>
 
         <div class="overlay">
             <nav class="overlayMenu">  
                 <ul role="menu" id="menu">
-                    <li><a href="#" role="menuitem">Promo</a></li>
-                    <li><a href="#s1" role="menuitem">Who am I?</a></li>
-                    <li><a href="#s2" role="menuitem">Why me?</a></li>
-                    <li><a href="#s3" role="menuitem">Works</a></li>
-                    <li><a href="#s4" role="menuitem">Contacts</a></li>
+                    <li><a href="#" role="menuitem">Главная</a></li>
+                    <li><a href="#s1" role="menuitem">О себе</a></li>
+                    <li><a href="#s2" role="menuitem">Почему я?</a></li>
+                    <li><a href="#s3" role="menuitem">Работы</a></li>
+                    <li><a href="#s4" role="menuitem">Контакты</a></li>
                 </ul>
             </nav>
         </div>
